changes to new expenses-model namespace with redhat

--- a/expenses-approvals-kjar/pom.xml
+++ b/expenses-approvals-kjar/pom.xml
@@ -57,7 +57,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.anadoluefes</groupId>
+      <groupId>com.redhat</groupId>
       <artifactId>expenses-model</artifactId>
       <version>1.0.0</version>
     </dependency>
