--- a/sap-expenses-service-task/pom.xml
+++ b/sap-expenses-service-task/pom.xml
@@ -78,7 +78,7 @@
   <dependencies>
 
     <dependency>
-      <groupId>com.anadoluefes</groupId>
+      <groupId>com.redhat</groupId>
       <artifactId>expenses-model</artifactId>
       <version>1.0.0</version>
     </dependency>
