--- a/hr-expenses-validations-service/src/main/docker/Dockerfile
+++ b/hr-expenses-validations-service/src/main/docker/Dockerfile
@@ -3,12 +3,12 @@ FROM registry.redhat.io/redhat-openjdk-18/openjdk18-openshift
 ENV JAVA_OPTIONS="-Dorg.drools.server.filter.classes=true -Dspring.profiles.active=openshift -Dorg.kie.server.startup.strategy=LocalContainersStartupStrategy -Dorg.kie.server.mode=PRODUCTION -Dkie.maven.settings.custom=/opt/jboss/.m2/settings.xml -Dorg.guvnor.m2repo.dir=/opt/jboss/.m2/repository -Dapplied=dockerfile"
 EXPOSE 8090
 
-COPY target/hr-expenses-validations-business-service-1.0.0-SNAPSHOT.jar /deployments/
+COPY target/hr-expenses-validations-business-service-1.0.0.jar /deployments/
 COPY hr-expenses-validations-business-service.xml /deployments/
 COPY ./src/main/docker/settings.xml /opt/jboss/.m2/settings.xml
 COPY local-m2-repository-offliner /opt/jboss/.m2/repository
 
-COPY maven/hr-expenses-validations-business-service-1.0.0-SNAPSHOT.jar /deployments/
+COPY maven/hr-expenses-validations-business-service-1.0.0.jar /deployments/
 COPY maven/hr-expenses-validations-business-service.xml /deployments/
 COPY maven/settings.xml /opt/jboss/.m2/settings.xml
 
