--- a/hr-expenses-validations-service/src/main/resources/application-h2.properties
+++ b/hr-expenses-validations-service/src/main/resources/application-h2.properties
@@ -64,17 +64,26 @@ kieserver.swagger.enabled=true
 #  use-resource-role-mappings: true
 #  bearer-only: true
 
-keycloak.auth-server-url=http://localhost:8280/auth
-keycloak.realm=local-test-kie-realm
-keycloak.resource=kie-sso-client
-keycloak.public-client=true
-keycloak.principal-attribute=preferred_username
-keycloak.enable-basic-auth=false
-keycloak.credentials.secret=ae521eda-5bcb-4b55-a60c-4a78fcc92bcc
-keycloak.use-resource-role-mappings=true
-keycloak.bearer-only=true
+#keycloak.auth-server-url=http://localhost:8280/auth
+#keycloak.realm=local-test-kie-realm
+#keycloak.resource=kie-sso-client
+#keycloak.public-client=true
+#keycloak.principal-attribute=preferred_username
+#keycloak.enable-basic-auth=false
+#keycloak.credentials.secret=ae521eda-5bcb-4b55-a60c-4a78fcc92bcc
+#keycloak.use-resource-role-mappings=true
+#keycloak.bearer-only=true
 
+# LOGGING SETTINGS
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.slf4j.simpleLogger.defaultLogLevel=DEBUG
+logging.level.org.kie.server.client=DEBUG
 
 logging.level.org.slf4j.simpleLogger.defaultLogLevel=DEBUG
 logging.level.org.kie.server.client=DEBUG
+#logging.level.org.kie=DEBUG
+
+logging.level.org.keycloak=DEBUG
+
+logging.level.com.redhat=DEBUG
