--- a/pam-client-service/src/main/resources/application-openshift.properties
+++ b/pam-client-service/src/main/resources/application-openshift.properties
@@ -52,3 +52,12 @@ logging.level.org.keycloak=DEBUG
 
 logging.level.com.redhat=DEBUG
 
+###########################################
+#                                         #
+# Application (non RHPAM) Required confgs #
+#                                         #
+###########################################
+#expenses.process-service-url=http://localhost:8092
+#expenses.validation-service-url=http://localhost:8093
+expenses.process.service.url=${SB_EXPENSES_PROCESS_URL:http://hr-expenses-business-application-service:8090/rest/server}
+expenses.validation.service.url=${SB_EXPENSES_VALIDATION_URL:com.redhat:payments:http://hr-expenses-validations-business-service:8090/rest/server}
