--- a/pam-client-service/src/main/resources/application-local.properties
+++ b/pam-client-service/src/main/resources/application-local.properties
@@ -1,4 +1,3 @@
-
 #server configuration
 server.address=0.0.0.0
 server.port=8091
@@ -58,3 +57,13 @@ logging.level.org.kie.server.client=DEBUG
 logging.level.org.keycloak=DEBUG
 
 logging.level.com.redhat=DEBUG
+
+###########################################
+#                                         #
+# Application (non RHPAM) Required confgs #
+#                                         #
+###########################################
+#expenses.process-service-url=http://localhost:8092
+#expenses.validation-service-url=http://localhost:8093
+expenses.process.service.url=${SB_EXPENSES_PROCESS_URL:http://wrong:8092/rest/server}
+expenses.validation.service.url=${SB_EXPENSES_VALIDATION_URL:com.redhat:payments:http://wrong:8093/rest/server}
