hr-expenses-business-application-service modifications

--- a/hr-expenses-business-application-service/src/main/resources/application-h2.properties
+++ b/hr-expenses-business-application-service/src/main/resources/application-h2.properties
@@ -71,7 +71,7 @@ keycloak.credentials.secret=a3e3c6d6-076a-4714-9265-cdbd53afe2fa
 #if you want to operate with the client roles, you should add the following to your configuration
 keycloak.use-resource-role-mappings=true
 keycloak.bearer-only=true
-keycloak.no-check-certificate=true
+#keycloak.no-check-certificate=true
 keycloak.disable-trust-manager=true
 #keycloak.enable-cors=true
 
