adding bundling of KJAR deployment

--- a/hr-expenses-validations-service/src/main/resources/application-h2.properties
+++ b/hr-expenses-validations-service/src/main/resources/application-h2.properties
@@ -22,7 +22,9 @@ kieserver.dmn.enabled=true
 #kieserver.casemgmt.enabled=true
 #kieserver.prometheus.enabled=true
 
-
+# KIE Server Immutable KJAR deloyment
+kieserver.classPathContainer=true
+kieserver.autoScanDeployments=true
 
 #jbpm configuration
 jbpm.executor.enabled=false
