correction of env variables

--- a/pam-client-service/pom.xml
+++ b/pam-client-service/pom.xml
@@ -278,10 +278,10 @@
                 <annotations>
                 </annotations>
                 <env>
-		          <GC_MAX_METASPACE_SIZE>512</GC_MAX_METASPACE_SIZE>
-		          <JAVA_OPTS_APPEND>-DSSO_AUTH_SERVER_URL=https://secure-sso-init-expenses.apps.cluster-4315.4315.example.opentlc.com</JAVA_OPTS_APPEND>
+	          <GC_MAX_METASPACE_SIZE>512</GC_MAX_METASPACE_SIZE>
+	          <JAVA_OPTS_APPEND>-DSSO_AUTH_SERVER_URL=https://secure-sso-init-expenses.apps.cluster-4315.4315.example.opentlc.com</JAVA_OPTS_APPEND>
                   <SB_EXPENSES_PROCESS_URL>http://hr-expenses-business-application-service:8090/rest/server</SB_EXPENSES_PROCESS_URL>
-                  <SB_EXPENSES_VALIDATION_URL>com.redhat:payments:http://hr-expenses-validations-business-service:8090/rest/server</SB_EXPENSES_VALIDATION_URL>
+                  <SB_EXPENSES_VALIDATION_URL>http://hr-expenses-validations-business-service:8090/rest/server</SB_EXPENSES_VALIDATION_URL>
                 </env>
                 <openshiftBuildConfig>
                   <requests>
