--- a/hr-expenses-business-application-service/pom.xml
+++ b/hr-expenses-business-application-service/pom.xml
@@ -340,6 +340,11 @@
           <groupId>mysql</groupId>
           <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <!-- for docker compose -->  
+        <dependency>
+          <groupId>com.h2database</groupId>
+          <artifactId>h2</artifactId>
+        </dependency>
         <!--dependency>
           <groupId>org.postgresql</groupId>
           <artifactId>postgresql</artifactId>
