Updating RHPAM binaries to RHPAM 7.11.1

--- a/hr-expenses-validations-service/pom.xml
+++ b/hr-expenses-validations-service/pom.xml
@@ -33,8 +33,10 @@
     <version.rhpam.bom>7.7.1.redhat-00002</version.rhpam.bom>-->
     <!-- Version 7.8 RHPAM BOM
     <version.rhpam.bom>7.8.0.redhat-00002</version.rhpam.bom>-->
-    <!-- Version 7.9 RHPAM BOM -->
-    <version.rhpam.bom>7.9.0.redhat-00002</version.rhpam.bom>
+    <!-- Version 7.9 RHPAM BOM 
+    <version.rhpam.bom>7.9.0.redhat-00002</version.rhpam.bom> -->
+    <!-- Version 7.11.1 RHPAM BOM -->
+    <version.rhpam.bom>7.11.1.redhat-00001</version.rhpam.bom> 
 
     <version.org.keycloak>9.0.3.redhat-00002</version.org.keycloak>
     <!--version.spring.boot>2.2.2.RELEASE</version.spring.boot-->
