--- a/hr-expenses-business-application-service/pom.xml
+++ b/hr-expenses-business-application-service/pom.xml
@@ -44,8 +44,10 @@
     <version.rhpam.bom>7.7.1.redhat-00002</version.rhpam.bom>-->
     <!-- Version 7.8 RHPAM BOM
     <version.rhpam.bom>7.8.0.redhat-00002</version.rhpam.bom> -->
-    <!-- Version 7.9 RHPAM BOM -->
-    <version.rhpam.bom>7.9.0.redhat-00002</version.rhpam.bom> 
+    <!-- Version 7.9 RHPAM BOM 
+    <version.rhpam.bom>7.9.0.redhat-00002</version.rhpam.bom> -->
+    <!-- Version 7.11.1 RHPAM BOM -->
+    <version.rhpam.bom>7.11.1.redhat-00001</version.rhpam.bom> 
 
     <version.keycloak>9.0.3.redhat-00002</version.keycloak>
 
