--- a/pam-client-service/pom.xml
+++ b/pam-client-service/pom.xml
@@ -38,7 +38,9 @@
 
     <!-- Version 7.8 RHPAM BOM
     <version.rhpam.bom>7.8.0.redhat-00002</version.rhpam.bom> -->
-    <!-- Version 7.9 RHPAM BOM -->
+    <!-- Version 7.9 RHPAM BOM 
+    <version.rhpam.bom>7.9.0.redhat-00002</version.rhpam.bom> -->
+    <!-- Version 7.11.1 RHPAM BOM -->
     <version.rhpam.bom>7.11.1.redhat-00001</version.rhpam.bom> 
 
     <!-- for BOM if I have time to test -->
